--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>8-Dars</title>
+    <title>Ulug'bek</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -11,15 +11,13 @@
     <main>
         <div class="homework">
             <h2>Uy ishlari</h2>
-            <a href="">Homework1</a>
-            <a href="">Homework2</a>
-            <a href="">Homework3</a>
+            <a href="https://bexruzfrontdev.github.io/wd-ulugbek/">Homework1</a>
+            <a href="https://bexruzfrontdev.github.io/fig.Ulugbek/">Homework2</a>
         </div>
         <div class="classwork">
             <h2>Darsdagi ishlari</h2>
-            <a href="">Dars1</a>
-            <a href="">Dars2</a>
-            <a href="">Dars3</a>
+            <a href="https://bexruzfrontdev.github.io/ulugbek/">Dars1</a>
+            <a href="https://bexruzfrontdev.github.io/figma.Ulugbek/">Dars2</a>
         </div>
         <img src="https://img.freepik.com/premium-photo/cute-3d-boy-avatar-character_914455-601.jpg" alt="">
     </main>
