--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <h2>Uy ishlari</h2>
             <a href="https://bexruzfrontdev.github.io/wd-ulugbek/">Homework1</a>
             <a href="https://bexruzfrontdev.github.io/fig.Ulugbek/">Homework2</a>
+             <a href="https://bexruzfrontdev.github.io/figmaUlugbek/">Homework3</a>
         </div>
         <div class="classwork">
             <h2>Darsdagi ishlari</h2>
