--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="https://bexruzfrontdev.github.io/wd-ulugbek/">Homework1</a>
             <a href="https://bexruzfrontdev.github.io/fig.Ulugbek/">Homework2</a>
             <a href="https://bexruzfrontdev.github.io/figmaUlugbek/">Homework3</a>
+            <a href="https://bexruzfrontdev.github.io/.fig-Ulugbek/">Homework4</a>
         </div>
         <div class="classwork">
             <h2>Darsdagi ishlari</h2>
