--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h2>Darsdagi ishlari</h2>
             <a href="https://bexruzfrontdev.github.io/ulugbek/">Dars1</a>
             <a href="https://bexruzfrontdev.github.io/figma.Ulugbek/">Dars2</a>
+            <a href="https://bexruzfrontdev.github.io/basketboll.Ulugbek/">Dars3</a>
         </div>
         <img src="https://img.freepik.com/premium-photo/cute-3d-boy-avatar-character_914455-601.jpg" alt="">
     </main>
