--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <a href="https://bexruzfrontdev.github.io/fig.Ulugbek/">Homework2</a>
             <a href="https://bexruzfrontdev.github.io/figmaUlugbek/">Homework3</a>
             <a href="https://bexruzfrontdev.github.io/.fig-Ulugbek/">Homework4</a>
+            <a href="https://bexruzfrontdev.github.io/shakillar.Ulugbek/">Homework5</a>
+            <a href="https://bexruzfrontdev.github.io/koinot.Ulugbek/">Homework6</a>
         </div>
         <div class="classwork">
             <h2>Darsdagi ishlari</h2>
