--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a href="https://bexruzfrontdev.github.io/basketboll.Ulugbek/">Dars4</a>
            <a href="https://bexruzfrontdev.github.io/.fig.Ulugbek/">Dars5</a>
              <a href="https://bexruzfrontdev.github.io/media.Ulugbek/">Dars6</a>
+             <a href="https://bexruzfrontdev.github.io/nav.Ulugbek/">Dars7</a>
         </div>
         <img src="https://img.freepik.com/premium-photo/cute-3d-boy-avatar-character_914455-601.jpg" alt="">
     </main>
