--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="https://bexruzfrontdev.github.io/.fig-Ulugbek/">Homework4</a>
             <a href="https://bexruzfrontdev.github.io/shakillar.Ulugbek/">Homework5</a>
             <a href="https://bexruzfrontdev.github.io/koinot.Ulugbek/">Homework6</a>
+             <a href="https://bexruzfrontdev.github.io/-figma.Ulug-bek/">Homework7</a>
         </div>
         <div class="classwork">
             <h2>Darsdagi ishlari</h2>
