--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
              <a href="https://bexruzfrontdev.github.io/media.Ulugbek/">Dars6</a>
              <a href="https://bexruzfrontdev.github.io/nav.Ulugbek/">Dars7</a>
         </div>
-        <img src="https://img.freepik.com/premium-photo/cute-3d-boy-avatar-character_914455-601.jpg" alt="">
+        <img src="https://wallpapers.com/images/featured/cool-profile-picture-87h46gcobjl5e4xu.jpg" alt="">
     </main>
 </body>
 </html>
