--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
              <a href="https://bexruzfrontdev.github.io/media.Ulugbek/">Dars6</a>
              <a href="https://bexruzfrontdev.github.io/nav.Ulugbek/">Dars7</a>
         </div>
-        <img src="https://wallpapers.com/images/featured/cool-profile-picture-87h46gcobjl5e4xu.jpg" alt="">
+        <img src="C:\Users\Usere\Desktop\Ulug'bek\photo_2024-03-13_20-53-40.jpg" alt="">
     </main>
 </body>
 </html>
