--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
              <a href="https://bexruzfrontdev.github.io/media.Ulugbek/">Dars6</a>
              <a href="https://bexruzfrontdev.github.io/nav.Ulugbek/">Dars7</a>
         </div>
-        <img src="C:\Users\Usere\Desktop\Ulug'bek\photo_2024-03-13_20-53-40.jpg" alt="">
+        <img src="https://www.afisha.uz/uploads/media/2021/05/0460736.jpeg" alt="">
     </main>
 </body>
 </html>
