--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="https://bexruzfrontdev.github.io/shakillar.Ulugbek/">Homework5</a>
             <a href="https://bexruzfrontdev.github.io/koinot.Ulugbek/">Homework6</a>
              <a href="https://bexruzfrontdev.github.io/-figma.Ulug-bek/">Homework7</a>
+              <a href="https://bexruzfrontdev.github.io/.media.Ulugbek/">Homework8</a>
         </div>
         <div class="classwork">
             <h2>Darsdagi ishlari</h2>
