--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
              <a href="https://bexruzfrontdev.github.io/media.Ulugbek/">Dars6</a>
              <a href="https://bexruzfrontdev.github.io/nav.Ulugbek/">Dars7</a>
         </div>
-        <img src="https://www.afisha.uz/uploads/media/2021/05/0460736.jpeg" alt="">
+        <img src="cute-3d-boy-avatar-character_914455-601.avif" alt="">
     </main>
 </body>
 </html>
