--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
              <a href="https://bexruzfrontdev.github.io/media.Ulugbek/">Dars6</a>
              <a href="https://bexruzfrontdev.github.io/nav.Ulugbek/">Dars7</a>
         </div>
-        <img src="https://videos.pexels.com/video-files/3163534/3163534-uhd_3840_2160_30fps.mp4" alt="">
+        <img src="cute-3d-boy-avatar-character_914455-601.avif" alt="">
     </main>
 </body>
 </html>
