--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
              <a href="https://bexruzfrontdev.github.io/media.Ulugbek/">Dars6</a>
              <a href="https://bexruzfrontdev.github.io/nav.Ulugbek/">Dars7</a>
         </div>
-        <img src="cute-3d-boy-avatar-character_914455-601.avif" alt="">
+        <img src="https://images.pexels.com/photos/9846134/pexels-photo-9846134.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
     </main>
 </body>
 </html>
