--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
              <a href="https://bexruzfrontdev.github.io/media.Ulugbek/">Dars6</a>
              <a href="https://bexruzfrontdev.github.io/nav.Ulugbek/">Dars7</a>
         </div>
-        <img src="https://images.pexels.com/photos/8408709/pexels-photo-8408709.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+        <img src="https://img.freepik.com/fotos-premium/fesselnder-3d-cartoon-avatar-fesselnde-frontprofilansicht-eines-10-jaehrigen-weissen-mannes-mit-schwarzem-h_983420-10038.jpg" alt="">
     </main>
 </body>
 </html>
