--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="https://bexruzfrontdev.github.io/koinot.Ulugbek/">Homework6</a>
              <a href="https://bexruzfrontdev.github.io/-figma.Ulug-bek/">Homework7</a>
               <a href="https://bexruzfrontdev.github.io/.figmaUlugbek/">Homework8</a>
+            <a href="https://bexruzfrontdev.github.io/fresh.Ulugbek/">Homework9</a>
         </div>
         <div class="classwork">
             <h2>Darsdagi ishlari</h2>
