--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
              <a href="https://bexruzfrontdev.github.io/-figma.Ulug-bek/">Homework7</a>
               <a href="https://bexruzfrontdev.github.io/.figmaUlugbek/">Homework8</a>
             <a href="https://bexruzfrontdev.github.io/fresh.Ulugbek/">Homework9</a>
+              <a href="https://bexruzfrontdev.github.io/honey.Ulugbek/">Homework10</a>
         </div>
         <div class="classwork">
             <h2>Darsdagi ishlari</h2>
