--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
              <a href="https://bexruzfrontdev.github.io/media.Ulugbek/">Dars6</a>
              <a href="https://bexruzfrontdev.github.io/nav.Ulugbek/">Dars7</a>
              <a href="https://bexruzfrontdev.github.io/bootstrap.Ulugbek/">Dars8</a>
+             <a href="https://bexruzfrontdev.github.io/js6.Ulugbek/">Dars9</a>
         </div>
         <img src="https://img.freepik.com/fotos-premium/fesselnder-3d-cartoon-avatar-fesselnde-frontprofilansicht-eines-10-jaehrigen-weissen-mannes-mit-schwarzem-h_983420-10038.jpg" alt="">
     </main>
