--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="https://bexruzfrontdev.github.io/fresh.Ulugbek/">Homework9</a>
               <a href="https://bexruzfrontdev.github.io/honey.Ulugbek/">Homework10</a>
               <a href="https://bexruzfrontdev.github.io/honey.Ulug-bek/">Homework11</a>
+            <a href="https://bexruzfrontdev.github.io/figma-Ulugbek/">Homework12</a>
         </div>
         <div class="classwork">
             <h2>Darsdagi ishlari</h2>
