--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
               <a href="https://bexruzfrontdev.github.io/honey.Ulug-bek/">Homework11</a>
             <a href="https://bexruzfrontdev.github.io/figma-Ulugbek/">Homework12</a>
              <a href="https://bexruzfrontdev.github.io/fig.Ulug-bek/">Homework13</a>
+             <a href="https://bexruzfrontdev.github.io/category.Ulugbek/">Homework14</a>
         </div>
         <div class="classwork">
             <h2>Darsdagi ishlari</h2>
