--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
              <a href="https://bexruzfrontdev.github.io/colorsUlugbek/">Dars10</a>
               <a href="https://bexruzfrontdev.github.io/calculator.Ulugbek/">Dars11</a>
              <a href="https://bexruzfrontdev.github.io/DINO.ULUGBEK/">Dars12</a>
+             <a href="https://bexruzfrontdev.github.io/js.Ulugbek/">Dars13</a>
         </div>
         <img src="https://img.freepik.com/fotos-premium/fesselnder-3d-cartoon-avatar-fesselnde-frontprofilansicht-eines-10-jaehrigen-weissen-mannes-mit-schwarzem-h_983420-10038.jpg" alt="">
     </main>
