--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
               <a href="https://bexruzfrontdev.github.io/calculator.Ulugbek/">Dars11</a>
              <a href="https://bexruzfrontdev.github.io/DINO.ULUGBEK/">Dars12</a>
              <a href="https://bexruzfrontdev.github.io/js.Ulugbek/">Dars13</a>
+             <a href="https://bexruzfrontdev.github.io/organik.Ulugbek/">Dars14</a>
         </div>
         <img src="https://img.freepik.com/fotos-premium/fesselnder-3d-cartoon-avatar-fesselnde-frontprofilansicht-eines-10-jaehrigen-weissen-mannes-mit-schwarzem-h_983420-10038.jpg" alt="">
     </main>
